# pb_02

./: CMakeLists.txt  Grade.cpp  Grade.h  Median.cpp  README.md  Student_info.cpp  Student_info.h  avg  avg.cpp  frame.cpp  func  func.cpp  grade.cpp  grade.h  greet.cpp  hello.cpp  locale_string.cpp  locale_string.h  main.cpp  med  med.cpp  median.cpp  median.h  mod.cpp  padd.cpp  struc  struc.cpp  student.info.cpp  student_info.cpp  student_info.h
Inc/: grade.h  median.h  student_info.h
Src/: grade.cpp  median.cpp  student_info.cpp
test/: normal
tests/: studs.txt
